# commitai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commitai.txt  go.mod  install.sh  main.go  pyproject.toml  requirements.txt  resumed.txt  setup.py
.github/workflows/: main.yml
api/: openai.go
cli/: cli.go
comai/: cli.py  git.py
commitai/: __init__.py  cli.py  git.py  template.py  templates.py
commitai/tests/: test_cli.py  test_git.py  test_template.py
env/: env.go
git/: git.go
helper/: helper.go
tests/: test_cli.py
